# duiker

./: .bumpversion.cfg  .gitignore  .python-version  .travis.yml  CHANGELOG.rst  Cargo.toml  LICENSE  Makefile  README.rst  Vagrantfile  conftest.py  duiker.py  setup.cfg  setup.py  test_duiker.py  tox.ini
migrations/20170525081331_create_history/: down.sql  up.sql
script/: mkpyz
src/: __main__.py  cli.yaml  commands.rs  config.rs  duiker.py  magic.bash  magic.fish  main.rs  models.rs  schema.rs  types.rs
src/duiker/: __init__.py  cli.py  config.py  dag.py  parser.py  types.py
src/duiker/db/: __init__.py
src/duiker/db/migrations/: migration_20170428T163032Z_initial.py
test/: test_dag.py  test_db.py  test_duiker.py  test_parser.py
